[workspace]
members = [
    "crates/anvil/",
    "crates/anvil/core/",
    "crates/anvil/rpc/",
    "crates/anvil/server/",
    "crates/cast/",
    "crates/cheatcodes/",
    "crates/cheatcodes/spec/",
    "crates/chisel/",
    "crates/cli/",
    "crates/common/",
    "crates/config/",
    "crates/debugger/",
    "crates/doc/",
    "crates/evm/core/",
    "crates/evm/coverage/",
    "crates/evm/evm/",
    "crates/evm/fuzz/",
    "crates/evm/traces/",
    "crates/fmt/",
    "crates/forge/",
    "crates/macros/",
    "crates/test-utils/",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"
# Remember to update clippy.toml as well
rust-version = "1.80"
authors = ["Foundry Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/foundry-rs/foundry"
repository = "https://github.com/foundry-rs/foundry"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
octal-escapes = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = "debuginfo"
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = 2
split-debuginfo = "unpacked"
strip = false

[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# Speed up tests and dev build.
[profile.dev.package]
# Solc and artifacts
foundry-compilers.opt-level = 3
solang-parser.opt-level = 3
lalrpop-util.opt-level = 3
serde_json.opt-level = 3

# EVM
alloy-dyn-abi.opt-level = 3
alloy-json-abi.opt-level = 3
alloy-primitives.opt-level = 3
alloy-sol-type-parser.opt-level = 3
alloy-sol-types.opt-level = 3
hashbrown.opt-level = 3
keccak.opt-level = 3
revm-interpreter.opt-level = 3
revm-precompile.opt-level = 3
revm-primitives.opt-level = 3
revm.opt-level = 3
ruint.opt-level = 3
sha2.opt-level = 3
sha3.opt-level = 3
tiny-keccak.opt-level = 3
bitvec.opt-level = 3

# fuzzing
proptest.opt-level = 3
foundry-evm-fuzz.opt-level = 3

# forking
axum.opt-level = 3

# keystores
scrypt.opt-level = 3

# zksync
zksync_multivm.opt-level = 3

# Override packages which aren't perf-sensitive for faster compilation speed and smaller binary size.
[profile.release.package]
alloy-sol-macro-expander.opt-level = "z"
figment.opt-level = "z"
foundry-compilers-artifacts-solc.opt-level = "z"
foundry-config.opt-level = "z"
html5ever.opt-level = "z"
mdbook.opt-level = "z"
prettyplease.opt-level = "z"
protobuf.opt-level = "z"
pulldown-cmark.opt-level = "z"
syn-solidity.opt-level = "z"
syn.opt-level = "z"
trezor-client.opt-level = "z"

[workspace.dependencies]
anvil = { path = "crates/anvil" }
cast = { path = "crates/cast" }
chisel = { path = "crates/chisel" }
forge = { path = "crates/forge" }

forge-doc = { path = "crates/doc" }
forge-fmt = { path = "crates/fmt" }
forge-verify = { path = "crates/verify" }
forge-script = { path = "crates/script" }
forge-sol-macro-gen = { path = "crates/sol-macro-gen" }
foundry-cheatcodes = { path = "crates/cheatcodes" }
foundry-cheatcodes-spec = { path = "crates/cheatcodes/spec" }
foundry-cheatcodes-common = { path = "crates/cheatcodes/common" }
foundry-cli = { path = "crates/cli" }
foundry-common = { path = "crates/common" }
foundry-common-fmt = { path = "crates/common/fmt" }
foundry-config = { path = "crates/config" }
foundry-debugger = { path = "crates/debugger" }
foundry-evm = { path = "crates/evm/evm" }
foundry-evm-abi = { path = "crates/evm/abi" }
foundry-evm-core = { path = "crates/evm/core" }
foundry-evm-coverage = { path = "crates/evm/coverage" }
foundry-evm-fuzz = { path = "crates/evm/fuzz" }
foundry-evm-traces = { path = "crates/evm/traces" }
foundry-macros = { path = "crates/macros" }
foundry-test-utils = { path = "crates/test-utils" }
foundry-wallets = { path = "crates/wallets" }
foundry-linking = { path = "crates/linking" }
foundry-zksync-core = { path = "crates/zksync/core" }
foundry-zksync-compiler = { path = "crates/zksync/compiler" }
foundry-zksync-inspectors = { path = "crates/zksync/inspectors" }

# solc & compilation utilities
# foundry-block-explorers = { version = "0.7.3", default-features = false }
# foundry-compilers = { version = "0.11.1", default-features = false }
# foundry-fork-db = "0.3"
foundry-block-explorers = { git = "https://github.com/Moonsong-Labs/block-explorers", branch = "zksync-v0.7.3", default-features = false }
foundry-compilers = { git = "https://github.com/Moonsong-Labs/compilers", branch = "zksync-v0.11.1" }
foundry-fork-db = { git = "https://github.com/Moonsong-Labs/foundry-zksync-fork-db", branch = "zksync-v0.3.1" }
solang-parser = "=0.3.3"

## revm
# no default features to avoid c-kzg
revm = { version = "14.0.2", default-features = false }
revm-primitives = { version = "10.0.0", default-features = false }
revm-inspectors = { version = "0.7", features = ["serde"] }

## ethers
ethers-contract-abigen = { version = "2.0.14", default-features = false }

## alloy
alloy-consensus = { version = "0.3.6", default-features = false }
alloy-contract = { version = "0.3.6", default-features = false }
alloy-eips = { version = "0.3.6", default-features = false }
alloy-genesis = { version = "0.3.6", default-features = false }
alloy-json-rpc = { version = "0.3.6", default-features = false }
alloy-network = { version = "0.3.6", default-features = false }
alloy-provider = { version = "0.3.6", default-features = false }
alloy-pubsub = { version = "0.3.6", default-features = false }
alloy-rpc-client = { version = "0.3.6", default-features = false }
alloy-rpc-types = { version = "0.3.6", default-features = true }
alloy-serde = { version = "0.3.6", default-features = false }
alloy-signer = { version = "0.3.6", default-features = false }
alloy-signer-aws = { version = "0.3.6", default-features = false }
alloy-signer-gcp = { version = "0.3.6", default-features = false }
alloy-signer-ledger = { version = "0.3.6", default-features = false }
alloy-signer-local = { version = "0.3.6", default-features = false }
alloy-signer-trezor = { version = "0.3.6", default-features = false }
alloy-transport = { version = "0.3.6", default-features = false }
alloy-transport-http = { version = "0.3.6", default-features = false }
alloy-transport-ipc = { version = "0.3.6", default-features = false }
alloy-transport-ws = { version = "0.3.6", default-features = false }

## alloy-core
alloy-dyn-abi = "0.8.1"
alloy-json-abi = "0.8.1"
alloy-primitives = { version = "0.8.1", features = ["getrandom", "rand"] }
alloy-sol-macro-expander = "0.8.1"
alloy-sol-macro-input = "0.8.1"
alloy-sol-types = "0.8.1"
syn-solidity = "0.8.1"

alloy-chains = "0.1"
alloy-rlp = "0.3"
alloy-trie = "0.5.0"

## op-alloy for tests in anvil
op-alloy-rpc-types = "0.2.9"

## zksync
era_test_node = { git="https://github.com/matter-labs/era-test-node.git" , rev = "ceee937055a5a373e27b0ff9bf2e42391de78c59" }
zksync-web3-rs = {git = "https://github.com/jrigada/zksync-web3-rs.git", rev = "bc3e6d3e75b7ff3747ff2dccefa9fb74d770931b"}
# zksync-web3-rs = {git = "https://github.com/lambdaclass/zksync-web3-rs.git", rev = "56653345d14331e0865a6785c77cdda63c94eeba"}
zksync_basic_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "7ad0425e00a44e0dd1c3abf38ab2f6335c2f86e7" }
zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "7ad0425e00a44e0dd1c3abf38ab2f6335c2f86e7" }
zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", rev = "7ad0425e00a44e0dd1c3abf38ab2f6335c2f86e7" }
zksync_multivm = { git = "https://github.com/matter-labs/zksync-era.git", rev = "7ad0425e00a44e0dd1c3abf38ab2f6335c2f86e7" }
zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era.git", rev = "7ad0425e00a44e0dd1c3abf38ab2f6335c2f86e7" }
zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", rev = "7ad0425e00a44e0dd1c3abf38ab2f6335c2f86e7" }
zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", rev = "7ad0425e00a44e0dd1c3abf38ab2f6335c2f86e7" }

## misc
async-trait = "0.1"
auto_impl = "1"
walkdir = "2"
proc-macro2 = "1.0.82"
quote = "1.0"
syn = "2.0"
prettyplease = "0.2.20"
ahash = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
color-eyre = "0.6"
derive_more = { version = "1.0", features = ["full"] }
dunce = "1"
evm-disassembler = "0.5"
eyre = "0.6"
figment = "0.10"
futures = "0.3"
itertools = "0.13"
jsonpath_lib = "0.3"
k256 = "0.13"
parking_lot = "0.12"
mesc = "0.3"
rand = "0.8"
rustc-hash = "2.0"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
similar-asserts = "1.5"
strum = "0.26"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
vergen = { version = "8", default-features = false }
indexmap = "2.2"
tikv-jemallocator = "0.6"
url = "2"
num-format = "0.4.4"
yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
tempfile = "3.10"
tokio = "1"
rayon = "1"
evmole = "0.5"
axum = "0.7"
hyper = "1.0"
reqwest = { version = "0.12", default-features = false }
tower = "0.4"
tower-http = "0.5"
# soldeer
soldeer = "=0.3.4"
proptest = "1"
comfy-table = "7"
