[workspace]
members = [
    "crates/anvil/",
    "crates/anvil/core/",
    "crates/anvil/rpc/",
    "crates/anvil/server/",
    "crates/cast/",
    "crates/cheatcodes/",
    "crates/cheatcodes/spec/",
    "crates/chisel/",
    "crates/cli/",
    "crates/common/",
    "crates/config/",
    "crates/debugger/",
    "crates/doc/",
    "crates/evm/core/",
    "crates/evm/coverage/",
    "crates/evm/evm/",
    "crates/evm/fuzz/",
    "crates/evm/traces/",
    "crates/fmt/",
    "crates/forge/",
    "crates/script-sequence/",
    "crates/macros/",
    "crates/test-utils/",
    "crates/strategy/zksync/",
]
resolver = "2"

[workspace.metadata]
# NOTE(zk): track upstream version after each merge
metadata.upstream_version = "1.0.0"

[workspace.package]
version = "0.0.21" # x-release-please-version
edition = "2021"
# Remember to update clippy.toml as well
rust-version = "1.83"
authors = ["Foundry Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/foundry-rs/foundry"
repository = "https://github.com/foundry-rs/foundry"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]

[workspace.lints.clippy]
dbg-macro = "warn"
explicit_iter_loop = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
octal-escapes = "allow"
result_large_err = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "debuginfo"
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
split-debuginfo = "unpacked"
strip = false

[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# Speed up tests and dev build.
[profile.dev.package]
# Solc and artifacts.
foundry-compilers-artifacts-solc.opt-level = 3
foundry-compilers-core.opt-level = 3
foundry-compilers.opt-level = 3
serde_json.opt-level = 3
serde.opt-level = 3

foundry-solang-parser.opt-level = 3
lalrpop-util.opt-level = 3

solar-ast.opt-level = 3
solar-data-structures.opt-level = 3
solar-interface.opt-level = 3
solar-parse.opt-level = 3

# EVM.
alloy-dyn-abi.opt-level = 3
alloy-json-abi.opt-level = 3
alloy-primitives.opt-level = 3
alloy-sol-type-parser.opt-level = 3
alloy-sol-types.opt-level = 3
hashbrown.opt-level = 3
foldhash.opt-level = 3
keccak.opt-level = 3
revm-interpreter.opt-level = 3
revm-precompile.opt-level = 3
revm-primitives.opt-level = 3
revm.opt-level = 3
ruint.opt-level = 3
sha2.opt-level = 3
sha3.opt-level = 3
tiny-keccak.opt-level = 3
bitvec.opt-level = 3

# Fuzzing.
proptest.opt-level = 3
foundry-evm-fuzz.opt-level = 3

# Forking.
axum.opt-level = 3

# Keystores.
scrypt.opt-level = 3

# Misc.
rayon.opt-level = 3
regex.opt-level = 3
regex-syntax.opt-level = 3
regex-automata.opt-level = 3

# zksync
zksync_multivm.opt-level = 3

# Override packages which aren't perf-sensitive for faster compilation speed and smaller binary size.
[profile.release.package]
alloy-sol-macro-expander.opt-level = "z"
figment.opt-level = "z"
foundry-compilers-artifacts-solc.opt-level = "z"
foundry-config.opt-level = "z"
html5ever.opt-level = "z"
mdbook.opt-level = "z"
prettyplease.opt-level = "z"
protobuf.opt-level = "z"
pulldown-cmark.opt-level = "z"
syn-solidity.opt-level = "z"
syn.opt-level = "z"
trezor-client.opt-level = "z"

[workspace.dependencies]
anvil = { path = "crates/anvil" }
cast = { path = "crates/cast" }
chisel = { path = "crates/chisel" }
forge = { path = "crates/forge" }

forge-doc = { path = "crates/doc" }
forge-fmt = { path = "crates/fmt" }
forge-verify = { path = "crates/verify" }
forge-script = { path = "crates/script" }
forge-sol-macro-gen = { path = "crates/sol-macro-gen" }
forge-script-sequence = { path = "crates/script-sequence" }
foundry-cheatcodes = { path = "crates/cheatcodes" }
foundry-cheatcodes-spec = { path = "crates/cheatcodes/spec" }
foundry-cheatcodes-common = { path = "crates/cheatcodes/common" }
foundry-cli = { path = "crates/cli" }
foundry-common = { path = "crates/common" }
foundry-common-fmt = { path = "crates/common/fmt" }
foundry-config = { path = "crates/config" }
foundry-debugger = { path = "crates/debugger" }
foundry-evm = { path = "crates/evm/evm" }
foundry-evm-abi = { path = "crates/evm/abi" }
foundry-evm-core = { path = "crates/evm/core" }
foundry-evm-coverage = { path = "crates/evm/coverage" }
foundry-evm-fuzz = { path = "crates/evm/fuzz" }
foundry-evm-traces = { path = "crates/evm/traces" }
foundry-macros = { path = "crates/macros" }
foundry-test-utils = { path = "crates/test-utils" }
foundry-wallets = { path = "crates/wallets" }
foundry-linking = { path = "crates/linking" }
foundry-zksync-core = { path = "crates/zksync/core" }
foundry-zksync-compilers = { path = "crates/zksync/compilers" }
foundry-zksync-inspectors = { path = "crates/zksync/inspectors" }
foundry-strategy-zksync = { path = "crates/strategy/zksync" }

# solc & compilation utilities
foundry-block-explorers = { version = "0.13.3", default-features = false }
foundry-compilers = { version = "0.14.0", default-features = false }
foundry-fork-db = "0.12"
solang-parser = { version = "=0.3.7", package = "foundry-solang-parser" }
solar-parse = { version = "=0.1.2", default-features = false }
solar-sema = { version = "=0.1.2", default-features = false }
solar-ast = { version = "=0.1.2", default-features = false }

## revm
revm = { version = "19.4.0", default-features = false }
revm-primitives = { version = "15.1.0", default-features = false }
revm-inspectors = { version = "0.16.0", features = ["serde"] }

## alloy
## Note(zk): alloy-zksync 0.12.5 is not compatible with latest alloy-consensus, this should be taken care of in the future release of alloy-zksync
alloy-consensus = { version = "=0.12.1", default-features = false }
alloy-contract = { version = "0.12.1", default-features = false }
alloy-eips = { version = "0.12.1", default-features = false }
alloy-genesis = { version = "0.12.1", default-features = false }
alloy-json-rpc = { version = "0.12.1", default-features = false }
alloy-network = { version = "0.12.1", default-features = false }
alloy-provider = { version = "0.12.1", default-features = false }
alloy-pubsub = { version = "0.12.1", default-features = false }
alloy-rpc-client = { version = "0.12.1", default-features = false }
alloy-rpc-types = { version = "0.12.1", default-features = true }
alloy-serde = { version = "0.12.1", default-features = false }
alloy-signer = { version = "0.12.1", default-features = false }
alloy-signer-aws = { version = "0.12.1", default-features = false }
alloy-signer-gcp = { version = "0.12.1", default-features = false }
alloy-signer-ledger = { version = "0.12.1", default-features = false }
alloy-signer-local = { version = "0.12.1", default-features = false }
alloy-signer-trezor = { version = "0.12.1", default-features = false }
alloy-transport = { version = "0.12.1", default-features = false }
alloy-transport-http = { version = "0.12.1", default-features = false }
alloy-transport-ipc = { version = "0.12.1", default-features = false }
alloy-transport-ws = { version = "0.12.1", default-features = false }

## alloy-core
alloy-dyn-abi = "0.8.22"
alloy-json-abi = "0.8.22"
alloy-primitives = { version = "0.8.22", features = [
    "getrandom",
    "rand",
    "map-fxhash",
    "map-foldhash",
] }
alloy-sol-macro-expander = "0.8.22"
alloy-sol-macro-input = "0.8.22"
alloy-sol-types = "0.8.22"

alloy-chains = "0.1"
alloy-rlp = "0.3"
alloy-zksync = "=0.12.1"

alloy-trie = "0.7.0"

## op-alloy
op-alloy-consensus = "0.11.0"
op-alloy-rpc-types = "0.11.0"

## cli
anstream = "0.6"
anstyle = "1.0"
terminal_size = "0.4"

## zksync
anvil_zksync_core = { git = "https://github.com/matter-labs/anvil-zksync.git", rev = "c6cbece8991ecb6ae90dd2d0fb3b662c8bf1c446" }
anvil_zksync_types = { git = "https://github.com/matter-labs/anvil-zksync.git", rev = "c6cbece8991ecb6ae90dd2d0fb3b662c8bf1c446" }
anvil_zksync_config = { git = "https://github.com/matter-labs/anvil-zksync.git", rev = "c6cbece8991ecb6ae90dd2d0fb3b662c8bf1c446" }
anvil_zksync_api_server = { git = "https://github.com/matter-labs/anvil-zksync.git", rev = "c6cbece8991ecb6ae90dd2d0fb3b662c8bf1c446" }
anvil_zksync_common = { git = "https://github.com/matter-labs/anvil-zksync.git", rev = "c6cbece8991ecb6ae90dd2d0fb3b662c8bf1c446" }
anvil_zksync_console = { git = "https://github.com/matter-labs/anvil-zksync.git", rev = "c6cbece8991ecb6ae90dd2d0fb3b662c8bf1c446" }
anvil_zksync_traces = { git = "https://github.com/matter-labs/anvil-zksync.git", rev = "c6cbece8991ecb6ae90dd2d0fb3b662c8bf1c446" }
anvil_zksync_l1_sidecar = { git = "https://github.com/matter-labs/anvil-zksync.git", rev = "c6cbece8991ecb6ae90dd2d0fb3b662c8bf1c446" }
zksync_telemetry = { git = "https://github.com/matter-labs/zksync-telemetry.git", rev = "f6d8618d870a09467ff24ea32ef57e01af8f311e" }
zksync_basic_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "core-v28.0.0" }
zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "core-v28.0.0" }
zksync_vm_interface = { git = "https://github.com/matter-labs/zksync-era.git", rev = "core-v28.0.0" }
zksync_multivm = { git = "https://github.com/matter-labs/zksync-era.git", rev = "core-v28.0.0" }
zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", rev = "core-v28.0.0" }
zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", rev = "core-v28.0.0" }

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
async-trait = "0.1"
derive_more = { version = "2.0", features = ["full"] }
thiserror = "2"

# misc
auto_impl = "1"
aws-config = { version = "1", default-features = true }
aws-sdk-kms = { version = "1", default-features = false }
bytes = "1.8"
walkdir = "2"
prettyplease = "0.2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
axum = "0.7"
ciborium = "0.2"
color-eyre = "0.6"
comfy-table = "7"
dirs = "6"
dunce = "1"
evm-disassembler = "0.5"
evmole = "0.7"
eyre = "0.6"
figment = "0.10"
futures = "0.3"
hyper = "1.5"
indicatif = "0.17"
itertools = "0.14"
jsonpath_lib = "0.3"
k256 = "0.13"
mesc = "0.3"
num-format = "0.4"
parking_lot = "0.12"
proptest = "1"
rand = "0.8"
rayon = "1"
regex = { version = "1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "rustls-tls-native-roots",
] }
rustls = "0.23"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "=1.0.128", features = ["arbitrary_precision"] }
similar-asserts = "1.6"
soldeer-commands = "=0.5.4"
soldeer-core = { version = "=0.5.4", features = ["serde"] }
strum = "0.27"
tempfile = "3.13"
tikv-jemallocator = "0.6"
tokio = "1"
toml = "0.8"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
vergen = { version = "8", default-features = false }
yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
httptest = "0.16.3"
path-slash = "0.2"
jiff = "0.2"

# Use unicode-rs which has a smaller binary size than the default ICU4X as the IDNA backend, used
# by the `url` crate.
# See the `idna_adapter` README.md for more details: https://docs.rs/crate/idna_adapter/latest
idna_adapter = "=1.1.0"

[patch.crates-io]
vise = { git = "https://github.com/matter-labs/vise.git", rev = "51669f42f60c50b3a521662a4ecd71212a303299" }
