[package]
edition = "2021"
keywords = ["ethereum", "web3"]
license = "MIT OR Apache-2.0"
name = "foundry-cli"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"
version = "0.2.0"

[build-dependencies]
vergen = {version = "7.0", default-features = false, features = ["build", "rustc", "git"]}

[dependencies]
# foundry internal
cast = {path = "../cast"}
error-chain = "0.5"
forge = {path = "../forge"}
forge-doc = {path = "../doc"}
forge-fmt = {path = "../fmt"}
foundry-common = {path = "../common"}
foundry-config = {path = "../config"}
foundry-utils = {path = "../utils"}
ui = {path = "../ui"}
web3 = "0.18"

# eth
ethers = {git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["rustls"]}
solang-parser = "=0.2.1"

# cli
atty = "0.2.14"
clap = {version = "4.0", features = ["derive", "env", "unicode", "wrap_help"]}
clap_complete = "4.0"
clap_complete_fig = "4.0"
comfy-table = "6.0.0"
console = "0.15.0"
dialoguer = {version = "0.10.2", default-features = false}
dotenvy = "0.15"
reqwest = {version = "0.11.8", default-features = false, features = [
  "json",
  "rustls",
  "rustls-native-certs",
]}
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter", "fmt"]}
watchexec = "2.0"
yansi = "0.5.1"

# async / parallel
async-trait = "0.1.53"
futures = "0.3.17"
rayon = "1.6.1"
tokio = {version = "1", features = ["macros"]}

# disk / paths
dunce = "1.0.2"
globset = "0.4.8"
path-slash = "0.2.0"
tempfile = "3.3.0"
walkdir = "2.3.2"

# misc
bytes = "1.1.0"
color-eyre = "0.6"
data-encoding = "2.3.3"
downloader = "0.2.7"
eyre = "0.6"
hex = "0.4.3"
indicatif = "0.17.1"
itertools = "0.10.3"
once_cell = "1.13"
parking_lot = "0.12"
pkg-config = "0.3.26"
proptest = "1.0.0"
regex = {version = "1.5.4", default-features = false}
ring = "0.16.20"
rpassword = "7.0.0"
rustc-hex = "2.1.0"
semver = "1.0.5"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.67"
sha2 = "0.10.6"
similar = {version = "2.1.0", features = ["inline"]}
strsim = "0.10.0"
strum = {version = "0.24", features = ["derive"]}
thiserror = "1.0.30"
which = "4.2.5"

#zksync
# zksync = {git = "https://github.com/matter-labs/zksync-era.git"}
zksync = {path = "../../../foundry-zksync/zksync-repos/zksync-era/sdk/zksync-rs"}

[dev-dependencies]
anvil = {path = "../anvil"}
criterion = "0.4.0"
foundry-cli-test-utils = {path = "./test-utils"}
foundry-utils = {path = "./../utils", features = ["test"]}
pretty_assertions = "1.0.0"
serial_test = "0.9.0"
svm = {package = "svm-rs", version = "0.2.16", default-features = false, features = ["rustls"]}
toml = "0.5"

[features]
default = ["rustls"]
openssl = ["ethers/openssl"]
rustls = ["ethers/rustls"]
solc-asm = ["ethers/solc-sha2-asm"]

# feature for integration tests that test external projects
external-integration-tests = []

[[bin]]
doc = false
name = "cast"
path = "src/cast.rs"

[[bin]]
doc = false
name = "forge"
path = "src/forge.rs"

[[bench]]
harness = false
name = "forge_test"

[[bench]]
harness = false
name = "cast"
