[package]
name = "ui"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "evm", "debugger"]

[dependencies]
forge = { path = "../forge" }
foundry-common = { path = "../common" }

ethers = { workspace = true }

crossterm = "0.26"
eyre = "0.6"
hex = "0.4"
# revm = { version = "3", features = ["std", "serde"] }
revm = {  git = "https://github.com/mm-zk/revm.git", branch = "release_v25_with_old_sha", version = "3", default-features = false, features = [
  "std",
  "serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
  "optional_no_base_fee"
] }
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
