[package]
name = "foundry-common"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
foundry-block-explorers = { workspace = true, features = ["foundry-compilers"] }
foundry-compilers.workspace = true
foundry-config.workspace = true

ethers-core.workspace = true
ethers-middleware.workspace = true
ethers-providers = { workspace = true, features = ["ws", "ipc"] }

# zksync
zksync-web3-rs = {git = "https://github.com/lambdaclass/zksync-web3-rs.git", rev = "70327ae5413c517bd4d27502507cdd96ee40cd22"}
zksync_basic_types.workspace = true
zksync_types.workspace = true
zksync_utils.workspace = true
revm.workspace = true
multivm.workspace = true

anyhow = {version = "1.0.70"}
dirs = {version = "5.0.0"}
ansi_term = "0.12.1"

# io
reqwest = { version = "0.11", default-features = false }
alloy-dyn-abi = { workspace = true, features = ["arbitrary", "eip712"] }
alloy-json-abi.workspace = true
alloy-primitives = { workspace = true, features = ["serde", "getrandom", "arbitrary", "rlp"] }
alloy-sol-types.workspace = true

async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
comfy-table = "7"
dunce = "1"
eyre.workspace = true
glob = "0.3"
globset = "0.4"
hex.workspace = true
once_cell = "1"
rand.workspace = true
regex = "1"
semver = { version = "1.0.22", features = ["serde"] }
serde_json.workspace = true
serde.workspace = true
tempfile = "3"
thiserror = "1"
tokio = "1"
tracing.workspace = true
url = "2"
walkdir = "2"
xxhash-rust = { version = "0.8.7", features = ["const_xxh3"] }
yansi = "0.5"

[dev-dependencies]
foundry-macros.workspace = true
pretty_assertions.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
